welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:11: error: ')' expected but '}' found.
        if (i<j){setPos((i,j)} else if (i>j){setPos(L-1-j,i)} else {setPos(i,i)}
                             ^